--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ buildNumber.properties
 .idea/**/usage.statistics.xml
 .idea/**/dictionaries
 .idea/**/shelf
+.idea/**/sqldialects.xml
 
 # Generated files
 .idea/**/contentModel.xml
